@@ -202,6 +202,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #3110: Add additional protect around SEM_VALUE_MAX for multiprocessing
+
 - In Pdb, prevent the reassignment of __builtin__._ by sys.displayhook on
   printing out values.
 
